--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -6,3 +6,10 @@
     @extend .card;
     background-color: rgb(79, 158, 53);
 }
+
+#color_elegido{
+    
+    width: 16px;
+    border: #000000;
+    border-radius: 100%;
+}
