--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10780,4 +10780,10 @@ textarea.form-control-lg {
   background-color: rgb(79, 158, 53);
 }
 
+#color_elegido {
+  width: 16px;
+  border: #000000;
+  border-radius: 100%;
+}
+
 /*# sourceMappingURL=custom.css.map */
