--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10786,4 +10786,19 @@ textarea.form-control-lg {
   border-radius: 100%;
 }
 
+@media (max-width: 576px) {
+  .responsive {
+    flex-direction: column;
+    align-items: center;
+    width: 90vw !important;
+  }
+  .card-title {
+    font-size: 80%;
+  }
+  .card-text:last-child {
+    margin-bottom: 0;
+    font-size: 4vw !important;
+  }
+}
+
 /*# sourceMappingURL=custom.css.map */
