--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -8,8 +8,23 @@
 }
 
 #color_elegido{
-    
     width: 16px;
     border: #000000;
     border-radius: 100%;
 }
+
+@media (max-width:576px){
+.responsive{
+flex-direction: column;
+align-items: center;
+width: 90vw !important;
+}
+.card-title{
+    font-size: 80%;
+}
+.card-text:last-child {
+    margin-bottom: 0;
+    font-size: 4vw !important;
+}
+}
+    
